# dsaViz

./: '  .clang-format  CMakeLists.txt  FetchDeps.cmake  LICENSE  README.md  compile_commands.json  dsavizLog.txt  incrementalBuildWindows.bat  rebuildWindows.bat
cmake/: FetchDeps.cmake
dsaViz/: audioEngine.cpp  camera.cpp  glfw_dark_mode.cpp  glfw_dark_mode.hpp  input.cpp  main.cpp  renderCircle.cpp  renderState.hpp  renderText.cpp  renderText.hpp  renderTriangle.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp
dsaViz/dsaViz/: audioEngine.hpp  camera.hpp  dsaContext.hpp  input.hpp  logSetup.hpp  random.hpp  renderCircle.hpp  renderText.hpp  shaderProgram.hpp  texture.hpp
dsaviz/: main.cpp
dsaviz/dsaviz/audio/: Audio.cpp  Audio.hpp
dsaviz/dsaviz/core/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  Scene.cpp  Scene.hpp  VizContext.hpp  VizObject.hpp
dsaviz/dsaviz/objects/: CircleObject.cpp  CircleObject.hpp  SquareObject.cpp  SquareObject.hpp  TextObject.cpp  TextObject.hpp  TextureObject.cpp  TextureObject.hpp  ValueSquare.cpp  ValueSquareObject.hpp
dsaviz/dsaviz/render/: CircleRenderer.cpp  CircleRenderer.hpp  Render.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SquareRenderer.cpp  SquareRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  TextureRenderer.cpp  TextureRenderer.hpp
dsaviz/dsaviz/scenes/: BarnsleyFern.cpp  BarnsleyFern.hpp  HomeScene.cpp  HomeScene.hpp  InsertionSortScene.cpp  InsertionSortScene.hpp  MainScene.cpp  MainScene.hpp  SelectionSortScene.cpp  SelectionSortScene.hpp
dsaviz/dsaviz/text/: Font.cpp  Font.hpp
dsaviz/dsaviz/util/: Color.cpp  Color.hpp  FrameTimeTracker.hpp  Random.hpp  Transform.cpp  Transform.hpp  glm.hpp  logSetup.cpp  logSetup.hpp
logs/: logs.txt
src/: main.cpp
